--- a/CSS/main.css
+++ b/CSS/main.css
@@ -47,7 +47,7 @@ body {
   transform: translate(-50%, -50%);
   transform-style: preserve-3d;
   animation: dream 8s infinite linear;
-  animation-duration: reverse;
+  animation-direction: reverse;
 }
 
 .dream-list li {
