몇가지 이미지 좌우반전

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -47,7 +47,6 @@ body {
   transform: translate(-50%, -50%);
   transform-style: preserve-3d;
   animation: dream 8s infinite linear;
-  animation-direction: reverse;
 }
 
 .dream-list li {
@@ -66,7 +65,7 @@ li img {
 }
 
 li:nth-child(1) {
-  transform: rotateY(0) translateZ(var(--translateZ));
+  transform: rotateY(0) translateZ(var(--translateZ)) scaleX(-1);
 }
 
 li:nth-child(2) {
@@ -74,7 +73,7 @@ li:nth-child(2) {
 }
 
 li:nth-child(3) {
-  transform: rotateY(calc((360deg / 6) * 2)) translateZ(var(--translateZ));
+  transform: rotateY(calc((360deg / 6) * 2)) translateZ(var(--translateZ)) scaleX(-1);
 }
 
 li:nth-child(4) {
